# allegedsite

./: .flake8  .gitignore  Makefile  Pipfile  README.md  REQUIREMENTS  Rules.mk  dev-requirements.in  fabfile.py  manage.py  package.json  pyproject.toml  requirements.in  requirements.txt  settings-sample.py  settings.py  setup.cfg  template_context_processors.py  urls.py
albums/: albumDefs.tcl  albums.csv  albums.numbers  mkthumb.py  netscape-cmap.ppm  peopleUrls.tcl  test_mkthumb.py
albums/c00-actionman/: Makefile  mkmf.py
albums/c01-pdc/: mkimg  mkimg.data  notes.txt
albums/c98-matt/: indexer.tcl
albums/c99-gideon/: mkscaled
albums/c99-matt/: jpegsfromtiffs.py  mkpix  testjpegsfromtiffs.py
albums/caption96/: indexer.tcl
albums/mull2003/: indexer.tcl  mull.xml  saved-mull.xml
alleged/: decorators.py  fromatom.py  settings-sample.py  settings.py  settings_production.py  urls.py  wsgi.py
alleged/blog/: .gitignore  Rules.mk  UPDATE-2025.md  entries.py  fromatom.py  tests.py  views.py  webpack.config.js
alleged/frontpage/: views.py
alleged/snaptioner/: albums.py  tests.py  urls.py  views.py
alleged/whyhello/: views.py
allegedsite/: asgi.py  settings-sample.py  settings.py  urls.py  wsgi.py
allegedsite/albums/: 20020501  albums.data  otherAlbums.tcl
blog/: entries.py  fromatom.py  tests.py  views.py
blog/templatetags/: atomtags.py
blog/test_data/: from_flickr.atom  from_livejournal.atom  from_youtube.atom
content/pdc/: Makefile  abbrDefs.tcl  entryDefs.tcl  entry_topics.py~  extra.mk~  extract_entry_metadata.py~  fetchLjLinks  img.data  index-n.html  index.html  index.th  index.th~  livejournal-pdc.errs  livejournal-pdc.html  lj.data  (+10 more)
pregenerated/: Makefile  Makefile.bak
snaptioner/: tests.py  urls.py  views.py
tpl/: front_page.html
(+7990 files in other folders)
