[tool.poetry]
name = "allegedsite"
version = "0.1.0"
description = "Alleged Site"
authors = ["Damian Cugley <pdc@alleged.org.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.dependencies]
python = "^3.9"
markdown = ">=2.6.0,<2.7.0"
django-environ = "^0.9.0"
httplib2 = "^0.20.4"
Django = ">=4.1.0,<4.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
