[tool.poetry]
name = "allegedsite"
version = "0.1.0"
description = "Alleged Site"
authors = ["Damian Cugley <pdc@alleged.org.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.dependencies]
python = "^3.9"
markdown = ">=2.6.0,<2.7.0"
django-environ = "^0.9.0"
httplib2 = "^0.20.4"
Django = ">=4.1.0,<4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
