[tool.poetry]
name = "allegedsite"
version = "0.1.0"
description = "Alleged Site"
authors = ["Damian Cugley <pdc@alleged.org.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
markdown = ">=2.6.0,<2.7.0"
django-environ = "^0.12.0"
httplib2 = "^0.30.0"
Django = "5.2.6"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
